--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Dozicounter</title>
+		<title>Wie teuer wird das Meeting?</title>
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
@@ -14,13 +14,13 @@
 
 
 			<div class="row">
- 				<div class="col-sm-12"><h1 class="page-header">Dozicounter <br /><small>Wenn Viele nichts zu tun haben</small></h1></div>
+ 				<div class="col-sm-12"><h1 class="page-header">Wie teuer wird das Meeting? <br /><small>Kostenschätzungen für Arbeitsstunden, die Menschen in Besprechungen verbringen ... </small></h1></div>
 			</div>
 
 
 			<div class="row">
 				<div class="col-sm-8">
- 				 <p class="lead" id="anzeige">0 CHF</p>
+ 				 <p class="lead" id="anzeige">0 EUR</p>
  			 	</div>
 
 		   	<div class="col-sm-4">
